--- a/inside.html
+++ b/inside.html
@@ -8,7 +8,7 @@
              font-family: Courier New;
 
          button{
-             background-color: rgb(20,20,20)
+             background-color: rgb(255,255,255)
                 }
              h1{
                  color: white;
@@ -28,12 +28,13 @@
  <h1> HAVE A QUACKTASTIC BIRTHDAY SINCERELY, </h1>
 <a href="index.html">
         <h2 style="font-family: Courier New">
-             Billy
+            <button type="button" onclick="document.location='index.html'"> <h1 style="color: black"> Billy</h1> </button>
         </h2>
     </a>
         <br>   <br>   <br>   <br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xWYjIiv283U?si=enVObP8NUGyPXPrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
 
 <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   
         (click "Billy" to go back)
